# essentials-cmake-test

./: CMakeLists.txt  README.md
test/: hello.cpp  test.cpp
